# peptide

./: .gitignore  Cargo.toml  papers.md  schrodinger_solver.py  trp_cage.prot
src/: atom_coords.rs  bond_vecs.rs  chem_definitions.rs  coord_gen.rs  forces.rs  gui.rs  kinematics.rs  lin_alg.rs  main.rs  proteins.rs  quantum.rs  render.rs  render_bevy.rs  render_wgpu.rs  save_load.rs  sc_atom_placement.rs  sidechain.rs  simulate.rs  time_sim.rs  types.rs  util.rs  water.rs  wf_lab.rs
