[package]
name = "peptide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphics = { path = "../graphics_wgpu" }
# We use `winit` here to import `winit` events, for passing to
# the renderer. todo: Re-export these from the graphics lib instead?
winit = "^0.27.2"
lin-alg2 = { path = "../lin_alg" }
egui = "^0.19.0"
rand = { version = "^0.8.5", features = ["std", "std_rng"] }
rfd = "0.10.0"  # File dialogs for saving and loading